# roboy_managing_node_fpga

./: CMakeLists.txt  package.xml
cmake/: configure-c5socarm.cmake  findncurses_arm.cmake  findpcap.cmake  findros.cmake  options.cmake  setde10.cmake
hps-c/: .cproject  Makefile  spi_control
hps-c/include/: hps_0.h  interface.hpp  myoControl.hpp  myoControlRegister.hpp  timer.hpp
hps-c/src/: interface.cpp  main.cpp  myoControl.cpp
include/roboy_managing_node_fpga/: myoMaster.hpp
src/: event.c  main.c  main.cpp  myoMaster.cpp
usr/lib/python3.5/: tarfile.py
